Finalización estado del arte

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -310,3 +310,180 @@ doi = {10.1145/3160489.3160492}
     howpublished = {\url{https://radon.readthedocs.io/}},
     note = {Accedido el: 31 de Octubre, 2023}
 }
+
+@misc{liukas_tedxcern,
+  author = {Linda Liukas},
+  title = {The Poetry of Programming},
+  howpublished = {TEDxCERN},
+  year = {2015},
+  note = {\url{https://www.youtube.com/watch?v=-jRREn6ifEQ}},
+  note = {Accedido el: 31 de Octubre, 2023}
+}
+ 
+@misc{hadi_partovi,
+  author = {Hadi Partovi},
+  title = {Computer science is for everyone},
+  howpublished = {TEDxRainier},
+  year = {2014},
+  note = {\url{https://www.youtube.com/watch?v=FpMNs7H24X0}},
+  note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@article{Woolf2009,
+  title={Building Intelligent Interactive Tutors},
+  author={Beverly Park Woolf},
+  journal={Morgan Kaufmann},
+  year={2009}
+}
+
+@article{Aleven2016,
+  title={Help Seeking and Intelligent Tutoring Systems: Theoretical Perspectives and a Step Towards Theoretical Integration},
+  author={Vincent Aleven and others},
+  journal={Educational Psychology Review},
+  year={2016}
+}
+
+@article{Nwana1990,
+  title={Intelligent Tutoring Systems: An Overview},
+  author={H. S. Nwana},
+  journal={Artificial Intelligence Review},
+  year={1990}
+}
+
+@article{VanLehn2011,
+  title={The Relative Effectiveness of Human Tutoring, Intelligent Tutoring Systems, and Other Tutoring Systems},
+  author={Kurt VanLehn},
+  journal={Educational Psychologist},
+  year={2011}
+}
+
+@article{Koedinger1997,
+  title={Intelligent tutoring goes to school in the big city},
+  author={Kenneth R. Koedinger and others},
+  journal={International Journal of Artificial Intelligence in Education},
+  year={1997}
+}
+
+@article{Durlach2008,
+  title={Learner modeling in intelligent tutoring systems},
+  author={Paula J. Durlach and Anne M. Lesgold},
+  journal={Educational Technology},
+  year={2008}
+}
+
+@article{Murray2003,
+  title={Authoring Intelligent Tutoring Systems},
+  author={Tom Murray},
+  journal={Journal of Educational Computing Research},
+  year={2003}
+}
+
+@article{Graesser2009,
+  title={AutoTutor: A tutor with dialogue in natural language},
+  author={Arthur C. Graesser and others},
+  journal={Behavior Research Methods, Instruments, \& Computers},
+  year={2009}
+}
+
+@techreport{Butz2006,
+  author = {Butz, C. J. and Hua, S. and Maguire, R. B.},
+  title = {A Web-based Bayesian Intelligent Tutoring System for Computer Programming},
+  institution = {Department of Computer Science, University of Regina},
+  year = {2006}
+}
+
+@article{Koedinger2013,
+  title={The Knowledge-Learning-Instruction Framework: Bridging the Science-Practice Chasm to Enhance Robust Student Learning},
+  author={K. R. Koedinger and A. T. Corbett and C. Perfetti},
+  journal={Cognitive Science},
+  year={2013}
+}
+
+@article{Walker2014,
+  title={Adaptive Intelligent Tutoring Systems and the Education Pipeline: Challenges and Promises},
+  author={E. Walker and N. Rummel},
+  journal={Journal of Educational Psychology},
+  year={2014}
+}
+
+@article{Romero2010,
+  title={Educational Data Mining: A Review of the State-of-the-Art},
+  author={C. Romero and S. Ventura},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics},
+  year={2010}
+}
+
+@article{Shmueli2016,
+  title={Ethical Considerations in the Big Data Era: The Prospects of Using Smartphone Apps and Social Media Data in Health Research},
+  author={E. Shmueli and B. A. Pliskin},
+  journal={Ethics and Information Technology},
+  year={2016}
+}
+
+@article{Sottilare2017,
+  title={Design Recommendations for Intelligent Tutoring Systems.},
+  author={R. A., Graesser and A. C., Hu and X. Holden, H.},
+  journal={Ethics and Information Technology},
+  year={2017}
+}
+
+@article{Fancsali2019,
+  title={Data-Driven Methodologies in Intelligent Tutoring Systems.},
+  author={Fancsali, S. E. and Nixon, T. andRitter, S.},
+  journal={Journal of Learning Analyticsy},
+  year={2019}
+}
+
+@article{Heffernan2014,
+  title={The ASSISTments Ecosystem: Building a Platform that Brings Scientists and Teachers Together for Minimally Invasive Research on Human Learning and Teaching.},
+  author={Heffernan, N. and Heffernan, C.},
+  journal={International Journal of Artificial Intelligence in Education},
+  year={2014}
+}
+
+@article{Radianti2020,
+  title={Virtual and Augmented Reality in Intelligent Tutoring Systems},
+  author={Radianti, J. and Majchrzak, T. A.},
+  journal={Journal of Educational Technology},
+  year={2020}
+}
+@article{Aleven2022,
+  title={Multidisciplinary Adaptability in Intelligent Tutoring Systems},
+  author={Aleven, V. and Xhakaj, F.},
+  journal={Educational Technology Research and Development},
+  year={2022}
+}
+@article{DMello2013,
+  title={Emotions and Learning in Intelligent Tutoring Systems},
+  author={D’Mello, S. and Graesser, A.},
+  journal={Journal of Educational Psychology},
+  year={2013}
+}
+
+@article{Reich2019,
+  title={Equity and Access in Intelligent Tutoring Systems},
+  author={Reich, J. and Ruipérez-Valiente, J. A.},
+  journal={Journal of Learning Sciences},
+  year={2019}
+}
+
+@article{Zawacki-Richter2019,
+  title={Ethics and Privacy in Intelligent Tutoring Systems},
+  author={Zawacki-Richter, O. and Marín, V. I.},
+  journal={International Journal of Educational Technology in Higher Education},
+  year={2019}
+}
+
+@article{Heffernan2019,
+  title={Human-Agent Interaction in Intelligent Tutoring Systems},
+  author={Heffernan, N. and Heffernan, C.},
+  journal={International Journal of Artificial Intelligence in Education},
+  year={2019}
+}
+
+@article{Corbett2001,
+  title={Effectiveness of Intelligent Tutoring Systems},
+  author={Corbett, A. and Anderson, J.},
+  journal={International Journal of Human-Computer Studies},
+  year={2001}
+}
