--- a/Plantilla_TFG_latex/proyecto.tex
+++ b/Plantilla_TFG_latex/proyecto.tex
@@ -251,6 +251,7 @@ pdfproducer = {pdflatex}
 \usepackage{microtype}
 \usepackage[T1]{fontenc}
 \usepackage{longtable} % para tablas largas
+\usepackage{tabulary}
 
 \begin{document}
 
