--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -1,7 +1,7 @@
 \chapter{Introducción} \label{chap:introduction}
 
 \section{Contexto Actual y Relevancia de la Programación}
-En la era actual, la digitalización está en todas partes. Afecta desde cómo nos comunicamos hasta como llevamos a cabo de tareas cotidianas. Siendo la tecnología la impulsora de este cambio. Dentro de este contexto,  la programación ya no es una mera herramienta técnica. Si no, que se ha convertido en una habilidad esencial del siglo XXI. No solo es importante para aquellos que buscan una carrera tecnológica. También es importante para el público que desea entender y utilizar eficazmente las herramientas digitales. Sin embargo, enseñar programación a niños presenta desafíos únicos. Debido a la complejidad del contenido como a las necesidades pedagógicas específicas.
+En la era actual, la digitalización está en todas partes. Afecta desde cómo nos comunicamos hasta como llevamos a cabo las tareas cotidianas. Dentro de este contexto,  la programación ya no es una mera herramienta técnica. Si no, que se ha convertido en una habilidad esencial del siglo XXI. No solo es importante para aquellos que buscan una carrera tecnológica. También es importante para el público que desea entender y utilizar eficazmente las herramientas digitales \cite{hadi_partovi}. Sin embargo, enseñar programación a niños presenta desafíos únicos. Debido a la complejidad del contenido como a las necesidades pedagógicas específicas \cite{liukas_tedxcern}.
 
 \section{Descripción del Problema}
 
@@ -23,12 +23,12 @@ El trabajo se estructura alrededor de varios núcleos esenciales:
 \end{enumerate}
 
 \subsection{Desarrollo Ágil}
-Para abordar la dinámica cambiante y las necesidades de adaptabilidad del proyecto, se ha optado por usar un enfoque de desarrollo ágil para el desarrollo del software. Esto, favorece un proceso iterativo e incremental, permitiendo varios ajustes rápidos ante cualquier cambio. Además, de ofrecer la posibilidad de realizar entregas parciales que se pueden evaluar y ajustar en fases iniciales.
+Para abordar la dinámica cambiante y las necesidades de adaptabilidad del proyecto, se ha optado por usar un enfoque de desarrollo ágil para la implementación del software. Esto, favorece un proceso iterativo e incremental, permitiendo varios ajustes rápidos ante cualquier cambio. Además, de ofrecer la posibilidad de realizar entregas parciales que se pueden evaluar y ajustar en fases iniciales.
 
 Esta estrategia de desarrollo asegura flexibilidad, fomenta la colaboración y se centra en el usuario final. Garantizando, así, que las soluciones implementadas se alinean con las necesidades del ámbito de la enseñanza y el aprendizaje.
 
 \section{Colaboración con Codelearn S.L.}
-Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L.  \cite{codelearn}, una destacada entidad internacional de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña programación a niños.
+Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L.  \cite{codelearn}, una destacada entidad de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña programación a niños.
 
 \section{Conclusión}
 Este TFG busca ofrecer soluciones sólidas y bien argumentadas a los retos actuales de la enseñanza en la programación. Mediante un enfoque innovador y una aplicación práctica, se busca establecer un fundamento sobre el cual puedan construirse futuros avances e investigaciones dentro del campo de la tecnología educativa adaptativa.
