Añadida sección de despliegue en la documentacion

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -487,3 +487,30 @@ doi = {10.1145/3160489.3160492}
   journal={International Journal of Human-Computer Studies},
   year={2001}
 }
+
+@misc{bahia,
+  author = {Fernández Luna, Juan Manuel and Benítez Sánchez, José Manuel},
+  note = {\url{https://bahia.ugr.es}},
+  note = {Accedido el: 12 de Noviembre, 2023}
+}
+
+@misc{dockerhub,
+  author = {Carrasco Vilar, Noelai},
+  note = {\url{https://hub.docker.com/r/nooocaaaa/programmingclasses}},
+  note = {Accedido el: 11 de Noviembre, 2023}
+}
+
+@misc{dockerhub2,
+  author = {Carrasco Vilar, Noelia},
+  note = {\url{https://hub.docker.com/r/nooocaaaa/postgres-tfg}},
+  note = {Accedido el: 11 de Noviembre, 2023}
+}
+
+
+@misc{podman,
+  author = {Red Hat},
+  note = {\url{https://podman.io/}},
+  note = {Accedido el: 11 de Noviembre, 2023}
+}
+
+
